# sora

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
.github/workflows/: lint.yml
app/adapters/: database.py
app/api/: __init__.py  register.py  upload.py
app/api/moderation/: __init__.py  ban_user.py  delete_upload.py
app/constants/: privileges.py
app/core/: config.py  limits.py  types.py
app/middleware/: limiter.py
app/models/: uploads.py  users.py
app/state/: services.py
app/test/: annotation.py  main.py
app/utils/: __init__.py  files.py  keys.py
app/web/: __init__.py  index.py  register.py
app/web/static/css/: main.css  register.css
app/web/static/js/: register.js
app/web/templates/: register.html
ext/: base.sql  nginx.example.conf
