[tool.poetry]
name = "sora"
version = "0.1.0"
description = "Simple, efficient, and powerful file and image hosting server written in Python"
authors = ["Henry \"hmont\" Monteith"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
